--- a/CV.tex
+++ b/CV.tex
@@ -136,25 +136,25 @@
 \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
     
-    \textbf{Languages}{: JavaScript/TypeScript, Java, Kotlin, Python, C/C++/C\#, HTML/CSS, \LaTeX, Bash, Lua, Haskell} \\
+    \textbf{Languages}{: JavaScript/TypeScript, Java, Kotlin, Python, C/C++/C\#, HTML/CSS, \LaTeX, Bash, Lua, Haskell, x86} \\
     
-    \textbf{Tools}{: GCP\footnotesize{(Functions, Metrics, Cloud Run, IAM, Cloud Storage, Load Balancer)}, AWS\footnotesize{(EC2, S3, Sagemaker, IAM)}, Firebase, Docker, Git, Tailwind CSS, Unix Shell}
+    \textbf{Tools}{: GCP\footnotesize{(Functions, Metrics, Cloud Run, IAM, Cloud Storage, Load Balancer)}, AWS\footnotesize{(EC2, S3, Sagemaker, IAM)}, Firebase, Docker, Git, Tailwind CSS, Unix Shell, GDB}
     
     \vspace{-5pt}
     
-    \textbf{Frameworks}{: React, Node.js, Express.js, JUnit} \\
+    \textbf{Frameworks}{: React, Node.js, Express.js, JUnit, Jest} \\
     
     \textbf{Libraries}{: Tensorflow, pandas, NumPy, Matplotlib}
 
     \vspace{-5pt}
 
-    \textbf{ML Structures}{: Multilayered Perceptron, CNN, (bi)RNN, (bi)LSTM, GAN, AdaIN(style transfer) }
+    \textbf{ML Structures}{: Multilayered Perceptron, CNN, (bi)RNN, (bi)LSTM, GAN, AdaIN(style transfer), RNN }
     
     }}
 \end{itemize}
 
 % -------------------- EXPERIENCE --------------------
-\section{Experience}
+\section{Work Experience}
   \resumeSubHeadingListStart
 
         \resumeProjectHeading
@@ -168,54 +168,63 @@
           {\textit{Reference available upon request}}{}
 
         \resumeProjectHeading
-          {\textbf{Professional Tutoring}\vspace{8pt} $|$ \footnotesize\emph{Tutor}}{2019 -- Present}
-          \small{Self-explanatory...}
-
-        \resumeProjectHeading
-          {\textbf{Super Club} $|$ \footnotesize\emph{Founder, Manager, Member}\vspace{8pt}}{Jan. 2021 -- April 2021}
-          {\small{Learned how to fly}}
-
-        \resumeProjectHeading
-          {\textbf{Marmaduke Charity} $|$ \footnotesize\emph{Volunteer, Manager}\vspace{8pt}}{August 2018 -- Present}
-          {\small{Interacted with and helped the local community. Earned an award for philanthropic hours spent}}
-
-        \resumeProjectHeading
-          {\textbf{Playing the Oboe}\vspace{8pt} $|$ \footnotesize\emph{Clarinet Player}}{August 2013 - June 2019}
-          {\small{Played the oboe for years, even joining jazz and marching bands. Took significant time, effort, and practice}}
-
-        \resumeProjectHeading
-          {\textbf{3\textsuperscript{rd} Place Time Keeper \footnotesize{(Local Competition, Family Tradition)}}\vspace{8pt} $|$ \footnotesize\emph{Competitor}}{Feb. 2022 -- May 2022}
-          {\small{Won \$50 locally competing against high school students in keeping track of the time}}
+          {\textbf{Olivetree Financial Ltd} $|$ \footnotesize\emph{Intern}\vspace{8pt}}{Summer 2019}
+          {Project: }{\small{Developed web scraping tools for the financial research team}}\\
+          {Fundamental Analysis: }{\small{Conceived, researched, presented a long-short investment proposal (Advanced Micro Devices)}}\\
+          {Other tasks: }{\small{Assisted head research analyst; aided chief compliance officer by making graphics}}
           
     \resumeSubHeadingListEnd 
 
 
 
-% -------------------- PROJECTS --------------------
-\section{Projects}
+\section{Personal Projects}
     \resumeSubHeadingListStart
     
         \resumeProjectHeading
-        {\textbf{ChatBuzz} $|$ \footnotesize\emph{TypeScript, HTML/CSS, Node.js, Webpack, Twitch API, Git, Unix Shell, VS Code}}{May 2023 -- Present}
+        {\textbf{RL Experiment} $|$ \footnotesize\emph{Java, Python, Tensorflow, Deep Q Learning} $|$ \href{https://github.com/brianbob12/Robot_Gym}{
+          \underline{source code}}}
+          {2020}
         \resumeItemListStart
-            \resumeItem{Developed a full-stack web application for Twitch livestreamers to display repeated chat messages on OBS}
-            \resumeItem{Experimented with Twitch API's OAuth Access Tokens to get chat data from the given channel}
-            % \resumeItem{Used minimal API calls, the bulk of the code was self-made logic and design}
-            % \resumeItem{Chose to restart the entire project to optimize runtime and experience}
-            \resumeItem{Collaborated with livestreamers to get feedback and suggested features}
-            \resumeItem{Solved problems relating to asynchronous tasks}
-            % \resumeItem{Optimized UX (User Experience) e.g. bought a simple domain name, made documentation, recorded a setup \& demo video, customization through URL arguments}
-            % \resumeItem{Published to GitHub and obsproject.com}
+            \resumeItem{Developed a java physics agent to simulate an agent in a 2d environment}
+            \resumeItem{Built a trianing data pipleling to a python tensorflow program to train an agent to complete an obstacle course}
+            \resumeItem{Used double deep Q learning to train an agent and otpimized the agent's performance}
         \resumeItemListEnd
           
         \resumeProjectHeading
-        {\textbf{FoodDropper} $|$ \footnotesize\emph{Java, Maven, Spigot API, Git, IntelliJ IDEA}}{August 2022}
+        {\textbf{Tensorflow 2 ML Package} $|$ \footnotesize\emph{Python, Tensorflow} $|$
+          \href{https://github.com/brianbob12/Elinvar}{
+          \underline{pacakge source}}, 
+          \href{https://github.com/brianbob12/FlowerRecognition}{\underline{usage}}
+          }{2022}
+          
         \resumeItemListStart
-            \resumeItem{Developed a Minecraft server plugin to limit players to one way of replenishing their hunger bar}
-            % \resumeItem{Created intended behavior by making logic complying to the extensive Spigot API in Java}
-            \resumeItem{Used persistent data containers to save and load data, ensuring that it persists across plugin resets}
-            \resumeItem{Optimized UX (User Experience) e.g. prioritized sound design, timing of food drops, supplied saturation level, and had to address many potential workarounds in the numerous ways of destroying the food dropper}
-            % \resumeItem{Published to GitHub and spigotmc.org}
+            \resumeItem{Developed and documented a python package to simplify the process of creating and training ML models}
+            \resumeItem{Added tools for automated training pipelines using callbacks for control}
+            \resumeItem{Used the tools to train a CNN to classify images of flowers}
+        \resumeItemListEnd
+
+        \resumeProjectHeading
+        {\textbf{Brittle Object Simulation} $|$ \footnotesize\emph{Python, GPU optimization} $|$
+          \href{https://github.com/brianbob12/Shatter2}{
+          \underline{source code}},
+          }{2022}
+          
+        \resumeItemListStart
+            \resumeItem{Program simulated the internal stresses of brittle lattices under forces and collisions}
+            \resumeItem{Used a gradient decent method to resolve internal stresses}
+        \resumeItemListEnd
+
+        \resumeProjectHeading
+        {\textbf{Weather Balloon Operating Code \& Circuits} \\ \footnotesize\emph{Python, Embedded Systems, Serial, USB, PWM, $I^2C$} $|$
+          \href{https://github.com/brianbob12/BalloonProject}{
+          \underline{source code}}
+          }{Launched in 2019}
+          
+        \resumeItemListStart
+            \resumeItem{Software took measurements from onboard sensors, stored and trasmitted the compressed data via a stillite link}
+            \resumeItem{Built for hardware and software redundancy}
+            \resumeItem{Wokred with a partner who handeled power and ballast, and lift systems of the balloon}
+            \resumeItem{Recived the CREST Gold award for the project}
         \resumeItemListEnd
           
     \resumeSubHeadingListEnd
