--- a/CV.tex
+++ b/CV.tex
@@ -118,7 +118,7 @@
       
       \vspace{5pt}
 
-      \textbf{Relevant Courses:} CIS 3310: Networks and Security, ESE 3010: Engineering Probability\\
+      \textbf{Relevant Courses:} \small{Networks and Security, Engineering Probability, (graduate level) Internet and Web Systems}\\
 
     \resumeSubheading
       {University College School \footnotesize{(UK)}}{July 2023} 
@@ -158,17 +158,16 @@
   \resumeSubHeadingListStart
 
         \resumeProjectHeading
-          {\textbf{Wharton OID Lab} $|$ \footnotesize\emph{Technical Lead on Bizzybots platform}\vspace{8pt}}{2022 - Present}
-          {\small{ lead development of an LLM-powered chatbot platform used for negotiation research and education. 
-          The development team is 5 people. I manage the development schedule, ensure product quality, and direct system design. 
-          I also do full-stack and devops development tasks.
-          I lead development of an LLM-powered chatbot platform used for negotiation research and education. 
-          The development team is 5 people. I manage the development schedule, ensure product quality, and direct system design. 
-          I also do full-stack and devops development tasks.}}{}\\
+          {\textbf{Technical Lead on Bizzybots platform} $|$ \footnotesize\emph{Wharton OID Lab}\vspace{8pt}}{2022 - Present}
+          \resumeItemListStart
+            \resumeItem{I lead development of an LLM-powered chatbot platform used for negotiation research and education}
+            \resumeItem{The development team is 5 people. I manage the development schedule, ensure product quality, and direct system design}
+            \resumeItem{I also do full-stack, security, and devops development tasks.}
+          \resumeItemListEnd
           {\textit{Reference available upon request}}{}
 
         \resumeProjectHeading
-          {\textbf{Olivetree Financial Ltd} $|$ \footnotesize\emph{Intern}\vspace{8pt}}{Summer 2019}
+          {\textbf{Intern} $|$ \footnotesize\emph{Olivetree Financial Ltd}\vspace{8pt}}{Summer 2019}
           {Project: }{\small{Developed web scraping tools for the financial research team}}\\
           {Fundamental Analysis: }{\small{Conceived, researched, presented a long-short investment proposal (Advanced Micro Devices)}}\\
           {Other tasks: }{\small{Assisted head research analyst; aided chief compliance officer by making graphics}}
@@ -186,8 +185,8 @@
           {2020}
         \resumeItemListStart
             \resumeItem{Developed a java physics agent to simulate an agent in a 2d environment}
-            \resumeItem{Built a trianing data pipleling to a python tensorflow program to train an agent to complete an obstacle course}
-            \resumeItem{Used double deep Q learning to train an agent and otpimized the agent's performance}
+            \resumeItem{Built a training data pipeline to a python tensorflow program to train an agent to complete an obstacle course}
+            \resumeItem{Used double deep Q learning to train an agent and optimized the agent's performance}
         \resumeItemListEnd
           
         \resumeProjectHeading
@@ -221,10 +220,10 @@
           }{Launched in 2019}
           
         \resumeItemListStart
-            \resumeItem{Software took measurements from onboard sensors, stored and trasmitted the compressed data via a stillite link}
+            \resumeItem{Software took measurements from onboard sensors, stored and transmitted the compressed data via a satellite link}
             \resumeItem{Built for hardware and software redundancy}
-            \resumeItem{Wokred with a partner who handeled power and ballast, and lift systems of the balloon}
-            \resumeItem{Recived the CREST Gold award for the project}
+            \resumeItem{Worked with a partner who handled power and ballast, and lift systems of the balloon}
+            \resumeItem{Received the CREST Gold award for the project}
         \resumeItemListEnd
           
     \resumeSubHeadingListEnd
