--- a/CV.tex
+++ b/CV.tex
@@ -122,7 +122,7 @@
 
     \resumeSubheading
       {University College School \footnotesize{(UK)}}{July 2023} 
-      {\textbf{A Levels:} \footnotesize{Physics(AQA) A*, Economics(EDEXCEL) A, Mathematics(OCR) A*, Further Mathematics(OCR) A}}{}
+      {\textbf{A Levels:} \footnotesize{Physics A*, Economics A, Mathematics A*, Further Mathematics A}}{}
       \newline
       \newline
       {\textbf{GCSE/IGCSE (all 9s):} \footnotesize{Mathematics, English Literature, English Language, Spanish, Chemistry, Biology, Computer Science, Physics, Geography, Drama }}{}
@@ -148,8 +148,6 @@
 
     \vspace{-5pt}
 
-    \textbf{ML Structures}{: Multilayered Perceptron, CNN, (bi)RNN, (bi)LSTM, GAN, AdaIN(style transfer), RNN }
-    
     }}
 \end{itemize}
 
@@ -168,9 +166,11 @@
 
         \resumeProjectHeading
           {\textbf{Intern} $|$ \footnotesize\emph{Olivetree Financial Ltd}\vspace{8pt}}{Summer 2019}
-          {Project: }{\small{Developed web scraping tools for the financial research team}}\\
-          {Fundamental Analysis: }{\small{Conceived, researched, presented a long-short investment proposal (Advanced Micro Devices)}}\\
-          {Other tasks: }{\small{Assisted head research analyst; aided chief compliance officer by making graphics}}
+          \resumeItemListStart
+          \resumeItem{Project -}{\small{Developed web scraping tools for the financial research team}}\\
+          \resumeItem{Fundamental Analysis -}{\small{Conceived, researched, presented a long-short investment proposal (Advanced Micro Devices)}}\\
+          \resumeItem{Other tasks -}{\small{Assisted head research analyst; aided chief compliance officer by making graphics}}
+          \resumeItemListEnd
           
     \resumeSubHeadingListEnd 
 
@@ -184,9 +184,9 @@
           \underline{source code}}}
           {2020}
         \resumeItemListStart
-            \resumeItem{Developed a java physics agent to simulate an agent in a 2d environment}
-            \resumeItem{Built a training data pipeline to a python tensorflow program to train an agent to complete an obstacle course}
-            \resumeItem{Used double deep Q learning to train an agent and optimized the agent's performance}
+            \resumeItem{Developed a java physics enviroment in 2d to simualte agents in}
+            \resumeItem{Tested multiple ML techniques on sed agents such as double deep Q learning}
+            \resumeItem{Built a traning data pipeline to help train agents to complete a 2d obstical course}
         \resumeItemListEnd
           
         \resumeProjectHeading
