--- a/CV.tex
+++ b/CV.tex
@@ -184,7 +184,7 @@
           \underline{source code}}}
           {2020}
         \resumeItemListStart
-            \resumeItem{Developed a java physics enviroment in 2d to simualte agents in}
+            \resumeItem{Developed a java physics environment in 2d to simualte agents in}
             \resumeItem{Tested multiple ML techniques on sed agents such as double deep Q learning}
             \resumeItem{Built a traning data pipeline to help train agents to complete a 2d obstical course}
         \resumeItemListEnd
