--- a/CV.tex
+++ b/CV.tex
@@ -159,7 +159,7 @@
           {\textbf{Technical Lead on Bizzybots platform} $|$ \footnotesize\emph{Wharton OID Lab}\vspace{8pt}}{2022 - Present}
           \resumeItemListStart
             \resumeItem{I lead development of an LLM-powered chatbot platform used for negotiation research and education}
-            \resumeItem{The development team is 5 people. I manage the development schedule, ensure product quality, and direct system design}
+            \resumeItem{I lead the five-member development team, manage the development schedule, ensure product quality, and direct system design}
             \resumeItem{I also do full-stack, security, and devops development tasks.}
           \resumeItemListEnd
           {\textit{Reference available upon request}}{}
