--- a/CV.tex
+++ b/CV.tex
@@ -156,7 +156,7 @@
   \resumeSubHeadingListStart
 
         \resumeProjectHeading
-          {\textbf{Technical Lead on Bizzybots platform} $|$ \footnotesize\emph{Wharton OID Lab}\vspace{8pt}}{2022 - Present}
+          {\textbf{Technical Lead on Bizzybots platform} $|$ \footnotesize\emph{Wharton Behavioral Lab}\vspace{8pt}}{2022 - Present}
           \resumeItemListStart
             \resumeItem{I lead development of an LLM-powered chatbot platform used for negotiation research and education}
             \resumeItem{I lead the five-member development team, manage the development schedule, ensure product quality, and direct system design}
@@ -184,9 +184,9 @@
           \underline{source code}}}
           {2020}
         \resumeItemListStart
-            \resumeItem{Developed a java physics environment in 2d to simualte agents in}
+            \resumeItem{Developed a java physics environment in 2d to simulate agents in}
             \resumeItem{Tested multiple ML techniques on sed agents such as double deep Q learning}
-            \resumeItem{Built a traning data pipeline to help train agents to complete a 2d obstical course}
+            \resumeItem{Built a traing data pipeline to help train agents to complete a 2d obstacle course}
         \resumeItemListEnd
           
         \resumeProjectHeading
