--- a/CV.tex
+++ b/CV.tex
@@ -118,14 +118,14 @@
       
       \vspace{5pt}
 
-      \textbf{Relevant Courses:} \small{Networks and Security, Engineering Probability, (graduate level) Internet and Web Systems}\\
+      \textbf{Relevant Courses:} \small{Networks and Security, Distributed Systems (graduate level), Linear Algebra (graduate level)}\\
 
     \resumeSubheading
       {University College School \footnotesize{(UK)}}{July 2023} 
-      {\textbf{A Levels:} \footnotesize{Physics A*, Economics A, Mathematics A*, Further Mathematics A}}{}
+      {\textbf{A Levels:} \footnotesize{Physics (grade A*), Economics (A), Mathematics (A*), Further Mathematics (A)}}{}
       \newline
       \newline
-      {\textbf{GCSE/IGCSE (all 9s):} \footnotesize{Mathematics, English Literature, English Language, Spanish, Chemistry, Biology, Computer Science, Physics, Geography, Drama }}{}
+      {\textbf{GCSE/IGCSE (grades all 9/9):} \footnotesize{Mathematics, English Literature, English Language, Spanish, Chemistry, Biology, Computer Science, Physics, Geography, Drama }}{}
 
 
 
@@ -156,20 +156,20 @@
   \resumeSubHeadingListStart
 
         \resumeProjectHeading
-          {\textbf{Technical Lead on Bizzybots platform} $|$ \footnotesize\emph{Wharton Behavioral Lab}\vspace{8pt}}{2022 - Present}
+          {\textbf{Technical Lead on Bizzybots Platform} $|$ \footnotesize\emph{Wharton Behavioral Lab}\vspace{8pt}}{2022 - Present}
           \resumeItemListStart
-            \resumeItem{I lead development of an LLM-powered chatbot platform used for negotiation research and education}
-            \resumeItem{I lead the five-member development team, manage the development schedule, ensure product quality, and direct system design}
-            \resumeItem{I also do full-stack, security, and devops development tasks.}
+            \resumeItem{I am leading development of an LLM-powered chatbot platform used for negotiation research and education}
+            \resumeItem{I manage the five-member development team, set the development schedule, ensure product quality and direct system design}
+            \resumeItem{I personally handle many full-stack, security, and DevOps tasks}
           \resumeItemListEnd
           {\textit{Reference available upon request}}{}
 
         \resumeProjectHeading
           {\textbf{Intern} $|$ \footnotesize\emph{Olivetree Financial Ltd}\vspace{8pt}}{Summer 2019}
           \resumeItemListStart
-          \resumeItem{Project -}{\small{Developed web scraping tools for the financial research team}}\\
-          \resumeItem{Fundamental Analysis -}{\small{Conceived, researched, presented a long-short investment proposal (Advanced Micro Devices)}}\\
-          \resumeItem{Other tasks -}{\small{Assisted head research analyst; aided chief compliance officer by making graphics}}
+          \resumeItem{\small{Developed web scraping tools for the financial research team}}\\
+          \resumeItem{\small{Conducted fundamental analysis. Conceived, researched and presented a long-short investment proposal (focused on Advanced Micro Devices Inc.)}}\\
+          \resumeItem{\small{Assisted head research analyst and aided chief compliance officer}}
           \resumeItemListEnd
           
     \resumeSubHeadingListEnd 
@@ -184,9 +184,9 @@
           \underline{source code}}}
           {2020}
         \resumeItemListStart
-            \resumeItem{Developed a java physics environment in 2d to simulate agents in}
-            \resumeItem{Tested multiple ML techniques on sed agents such as double deep Q learning}
-            \resumeItem{Built a traing data pipeline to help train agents to complete a 2d obstacle course}
+            \resumeItem{Developed a Java physics environment in 2d to simulate agents}
+            \resumeItem{Tested multiple ML techniques on the agents, such as double deep Q learning}
+            \resumeItem{Built a training data pipeline to help train agents to complete a 2d obstacle course}
         \resumeItemListEnd
           
         \resumeProjectHeading
@@ -209,8 +209,8 @@
           }{2022}
           
         \resumeItemListStart
-            \resumeItem{Program simulated the internal stresses of brittle lattices under forces and collisions}
-            \resumeItem{Used a gradient decent method to resolve internal stresses}
+            \resumeItem{Developed program that simulated the internal stresses of brittle lattices under forces and collisions}
+            \resumeItem{Used a gradient descent method to resolve internal stresses}
         \resumeItemListEnd
 
         \resumeProjectHeading
@@ -220,9 +220,9 @@
           }{Launched in 2019}
           
         \resumeItemListStart
-            \resumeItem{Software took measurements from onboard sensors, stored and transmitted the compressed data via a satellite link}
-            \resumeItem{Built for hardware and software redundancy}
-            \resumeItem{Worked with a partner who handled power and ballast, and lift systems of the balloon}
+            \resumeItem{Created software that took measurements from onboard sensors, stored and transmitted the compressed data via a satellite link}
+            \resumeItem{Provided for hardware and software redundancy}
+            \resumeItem{Collaborated with a partner who handled power, ballast and lift systems of the balloon}
             \resumeItem{Received the CREST Gold award for the project}
         \resumeItemListEnd
           
