--- a/CV.tex
+++ b/CV.tex
@@ -114,11 +114,11 @@
   
     \resumeSubheading
       {University of Pennsylvania}{May 2026}
-      {Bachelor of Science in Computer Science}{Current GPA: 3.53/4.0}
+      {Bachelor of Science in Computer Science}{Current GPA: 3.64/4.0}
       
       \vspace{5pt}
 
-      \textbf{Relevant Courses:} \small{Networks and Security, Distributed Systems (graduate level), Linear Algebra (graduate level)}\\
+      \textbf{Relevant Courses:} \small{Networks and Security, Internet And Web Systems (graduate level), Linear Algebra and Optimisation (graduate level)}\\
 
     \resumeSubheading
       {University College School \footnotesize{(UK)}}{July 2023} 
