--- a/CV.tex
+++ b/CV.tex
@@ -118,7 +118,7 @@
       
       \vspace{5pt}
 
-      \textbf{Relevant Courses:} \small{Networks and Security, Internet And Web Systems (graduate level), Linear Algebra and Optimisation (graduate level)}\\
+      \textbf{Relevant Courses:} \small{Linear Algebra and Optimisation (graduate level), Internet And Web Systems (graduate level)}\\
 
     \resumeSubheading
       {University College School \footnotesize{(UK)}}{July 2023} 
@@ -136,7 +136,7 @@
 \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
     
-    \textbf{Languages}{: JavaScript/TypeScript, Java, Kotlin, Python, C/C++/C\#, HTML/CSS, \LaTeX, Bash, Lua, Haskell, x86} \\
+    \textbf{Languages}{: JavaScript/TypeScript, Java, Kotlin, Python, C/C++/C\#, HTML/CSS, \LaTeX, Unix Shell, Lua, Haskell, x86, RISC-V} \\
     
     \textbf{Tools}{: GCP\footnotesize{(Functions, Metrics, Cloud Run, IAM, Cloud Storage, Load Balancer)}, AWS\footnotesize{(EC2, S3, Sagemaker, IAM)}, Firebase, Docker, Git, Tailwind CSS, Unix Shell, GDB, Selenium}
     
@@ -144,7 +144,7 @@
     
     \textbf{Frameworks}{: React, Node.js, Express.js, JUnit, Jest} \\
     
-    \textbf{Libraries}{: Tensorflow, pandas, NumPy, Matplotlib}
+    \textbf{Libraries}{: Pytorch, Tensorflow, pandas, NumPy, Matplotlib}
 
     \vspace{-5pt}
 
@@ -179,27 +179,15 @@
 \section{Personal Projects}
     \resumeSubHeadingListStart
     
-        \resumeProjectHeading
-        {\textbf{RL Experiment} $|$ \footnotesize\emph{Java, Python, Tensorflow, Deep Q Learning} $|$ \href{https://github.com/brianbob12/Robot_Gym}{
-          \underline{source code}}}
-          {2020}
-        \resumeItemListStart
-            \resumeItem{Developed a Java physics environment in 2d to simulate agents}
-            \resumeItem{Tested multiple ML techniques on the agents, such as double deep Q learning}
-            \resumeItem{Built a training data pipeline to help train agents to complete a 2d obstacle course}
-        \resumeItemListEnd
-          
-        \resumeProjectHeading
-        {\textbf{Tensorflow 2 ML Package} $|$ \footnotesize\emph{Python, Tensorflow} $|$
-          \href{https://github.com/brianbob12/Elinvar}{
-          \underline{pacakge source}}, 
-          \href{https://github.com/brianbob12/FlowerRecognition}{\underline{usage}}
-          }{2022}
+      \resumeProjectHeading
+        {\textbf{Weather Balloon Operating Code \& Circuits} \\ \footnotesize\emph{Python, Embedded Systems, Serial, USB, PWM, $I^2C$}
+          }{Launched in 2019}
           
         \resumeItemListStart
-            \resumeItem{Developed and documented a python package to simplify the process of creating and training ML models}
-            \resumeItem{Added tools for automated training pipelines using callbacks for control}
-            \resumeItem{Used the tools to train a CNN to classify images of flowers}
+            \resumeItem{Created software that took measurements from onboard sensors, stored and transmitted the compressed data via a satellite link}
+            \resumeItem{Provided for hardware and software redundancy}
+            \resumeItem{Collaborated with a partner who handled power, ballast and lift systems of the balloon}
+            \resumeItem{Received the CREST Gold award for the project}
         \resumeItemListEnd
 
         \resumeProjectHeading
@@ -210,22 +198,19 @@
           
         \resumeItemListStart
             \resumeItem{Developed program that simulated the internal stresses of brittle lattices under forces and collisions}
-            \resumeItem{Used a gradient descent method to resolve internal stresses}
+            \resumeItem{Used a gradient descent method to resolve bond stresses}
+            \resumeItem{Optimized the program to run on a GPU}
         \resumeItemListEnd
 
         \resumeProjectHeading
-        {\textbf{Weather Balloon Operating Code \& Circuits} \\ \footnotesize\emph{Python, Embedded Systems, Serial, USB, PWM, $I^2C$} $|$
-          \href{https://github.com/brianbob12/BalloonProject}{
-          \underline{source code}}
-          }{Launched in 2019}
-          
+        {\textbf{RL Experiment} $|$ \footnotesize\emph{Java, Python, Tensorflow, Deep Q Learning} $|$ \href{https://github.com/brianbob12/Robot_Gym}{
+          \underline{source code}}}
+          {2020}
         \resumeItemListStart
-            \resumeItem{Created software that took measurements from onboard sensors, stored and transmitted the compressed data via a satellite link}
-            \resumeItem{Provided for hardware and software redundancy}
-            \resumeItem{Collaborated with a partner who handled power, ballast and lift systems of the balloon}
-            \resumeItem{Received the CREST Gold award for the project}
+            \resumeItem{Developed a Java physics environment in 2d to simulate agents}
+            \resumeItem{Tested multiple ML techniques on the agents, such as double deep Q learning}
+            \resumeItem{Built a training data pipeline to help train agents to complete a 2d obstacle course}
         \resumeItemListEnd
-          
     \resumeSubHeadingListEnd
-
+          
 \end{document}
