--- a/CV.tex
+++ b/CV.tex
@@ -138,15 +138,15 @@
     
     \textbf{Languages}{: JavaScript/TypeScript, Java, Kotlin, Python, C/C++/C\#, HTML/CSS, \LaTeX, Unix Shell, Lua, Haskell, x86, RISC-V} \\
     
-    \textbf{Tools}{: GCP\footnotesize{(Functions, Metrics, Cloud Run, IAM, Cloud Storage, Load Balancer)}, AWS\footnotesize{(EC2, S3, Sagemaker, IAM)}, Firebase, Docker, Git, Tailwind CSS, Unix Shell, GDB, Selenium}
+    \textbf{Software Tools}{: Matlab, GCP\footnotesize{(Functions, Metrics, Cloud Run, IAM, Cloud Storage, Load Balancer, Cloud Logging)}, AWS\footnotesize{(EC2, S3, Sagemaker, IAM)}, Firebase, Docker, Git, Tailwind CSS, Unix Shell, GDB, Selenium}
+
+    \textbf{Other tools}{: Solidworks, PrusaSlicer, Onshape, SystemVerilog}
     
     \vspace{-5pt}
     
     \textbf{Frameworks}{: React, Node.js, Express.js, JUnit, Jest} \\
     
     \textbf{Libraries}{: Pytorch, Tensorflow, pandas, NumPy, Matplotlib}
-
-    \vspace{-5pt}
 
     }}
 \end{itemize}
@@ -156,7 +156,7 @@
   \resumeSubHeadingListStart
 
         \resumeProjectHeading
-          {\textbf{Technical Lead on Bizzybots Platform} $|$ \footnotesize\emph{Wharton Behavioral Lab}\vspace{8pt}}{2022 - Present}
+          {\textbf{Technical Lead on Bizzybots Platform} $|$ \footnotesize\emph{Wharton Behavioral Lab}}{2022 - Present}
           \resumeItemListStart
             \resumeItem{I am leading development of an LLM-powered chatbot platform used for negotiation research and education}
             \resumeItem{I manage the five-member development team, set the development schedule, ensure product quality and direct system design}
@@ -165,13 +165,12 @@
           {\textit{Reference available upon request}}{}
 
         \resumeProjectHeading
-          {\textbf{Intern} $|$ \footnotesize\emph{Olivetree Financial Ltd}\vspace{8pt}}{Summer 2019}
+          {\textbf{Teaching Assistant for Internet and Web Systems} (graduate level) $|$ \footnotesize\emph{University of Pennsylvania}}{2024 - Present}
           \resumeItemListStart
-          \resumeItem{\small{Developed web scraping tools for the financial research team}}\\
-          \resumeItem{\small{Conducted fundamental analysis. Conceived, researched and presented a long-short investment proposal (focused on Advanced Micro Devices Inc.)}}\\
-          \resumeItem{\small{Assisted head research analyst and aided chief compliance officer}}
+            \resumeItem{Through Office Hours and an online forum, I help students debug their code and understand the course material}
+            \resumeItem{I mentor two groups through the final project, building a distributed search engine}
           \resumeItemListEnd
-          
+
     \resumeSubHeadingListEnd 
 
 
