--- a/CV.tex
+++ b/CV.tex
@@ -138,15 +138,15 @@
     
     \textbf{Languages}{: JavaScript/TypeScript, Java, Kotlin, Python, C/C++/C\#, HTML/CSS, \LaTeX, Unix Shell, Lua, Haskell, x86, RISC-V} \\
     
-    \textbf{Software Tools}{: Matlab, GCP\footnotesize{(Functions, Metrics, Cloud Run, IAM, Cloud Storage, Load Balancer, Cloud Logging)}, AWS\footnotesize{(EC2, S3, Sagemaker, IAM)}, Firebase, Docker, Git, Tailwind CSS, Unix Shell, GDB, Selenium}
+    \textbf{Software Tools}{: Matlab, GCP\footnotesize{(Functions, Metrics, Cloud Run, IAM, Cloud Storage, Load Balancer, Cloud Logging)}, AWS\footnotesize{(EC2, S3, Sagemaker, IAM)}, Firebase, Docker, Git, Tailwind CSS, Unix Shell, GDB, Selenium}\\
 
-    \textbf{Other tools}{: Solidworks, PrusaSlicer, Onshape, SystemVerilog}
+    \textbf{Other tools}{: Solidworks, PrusaSlicer, Onshape, SystemVerilog}\\
+
+    \textbf{Fabrication Experience}{: FDM 3D printing (PLA, ASA, PETG), laser cutting}\\
     
-    \vspace{-5pt}
+    \textbf{Software Frameworks}{: React, Node.js, Express.js, JUnit, Jest} \\
     
-    \textbf{Frameworks}{: React, Node.js, Express.js, JUnit, Jest} \\
-    
-    \textbf{Libraries}{: Pytorch, Tensorflow, pandas, NumPy, Matplotlib}
+    \textbf{Software Libraries}{: Pytorch, Tensorflow, pandas, NumPy, Matplotlib}
 
     }}
 \end{itemize}
@@ -159,8 +159,10 @@
           {\textbf{Technical Lead on Bizzybots Platform} $|$ \footnotesize\emph{Wharton Behavioral Lab}}{2022 - Present}
           \resumeItemListStart
             \resumeItem{I am leading development of an LLM-powered chatbot platform used for negotiation research and education}
-            \resumeItem{I manage the five-member development team, set the development schedule, ensure product quality and direct system design}
+            \resumeItem{Manage the five-member development team, set the development schedule, ensure product quality and direct system design}
+            \resumeItem{Manage QA for the platform, through code standards \& reviews, unit testing, integraiton testing and UI testing}
             \resumeItem{I personally handle many full-stack, security, and DevOps tasks}
+            
           \resumeItemListEnd
           {\textit{Reference available upon request}}{}
 
