--- a/CV.tex
+++ b/CV.tex
@@ -118,7 +118,7 @@
       
       \vspace{5pt}
 
-      \textbf{Relevant Courses:} \small{Linear Algebra and Optimisation (graduate level), Internet And Web Systems (graduate level)}\\
+      \textbf{Relevant Courses:} \small{Mechanical Properites of Materials (graduate level), Introduction to Mechanical Design}\\
 
     \resumeSubheading
       {University College School \footnotesize{(UK)}}{July 2023} 
