--- a/CV.tex
+++ b/CV.tex
@@ -114,7 +114,7 @@
   
     \resumeSubheading
       {University of Pennsylvania}{May 2026}
-      {Jointly perusing Bachelor of Science and Master of Science in Computer Science}{Current GPA: 3.64/4.0}
+      {Jointly pursuing Bachelor of Science and Master of Science in Computer Science}{Current GPA: 3.64/4.0}
       
       \vspace{5pt}
 
